--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
 title            : Boxplot
-description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
+description      : This homework closes our session on descriptive statistics.
 university       : DataCamp
 difficulty_level : 2
 time_needed      : 1 hour
