added exercise on xyplot

--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
-title            : Boxplot
-description      : This homework closes our session on descriptive statistics.
-university       : DataCamp
+title            : Reproducible Research with R
+description      : Exercises for a reproducible research course in R.
+university       : QUEST
 difficulty_level : 2
 time_needed      : 1 hour
