--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
 title            : Reproducible Research with R
-description      : Exercises for a reproducible research course in R.
+description      : Homework exercises for a reproducible research course in R taught at BIH Berlin.
 university       : QUEST
 difficulty_level : 2
 time_needed      : 1 hour
